--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div>
   <ul>
     <li>
-    <a [routerLink]="['/']">Home</a>
+    <a [routerLink]="['']">Home</a>
     </li>
     <li>
     <a [routerLink]="['/login']">Login</a>
@@ -9,6 +9,12 @@
     <li>
     <a [routerLink]="['/products']">Products</a>
     </li>
+    <li>
+      <a [routerLink]="['/panel']">Panel</a>
+      </li>
+    <li>
+      <a [routerLink]="['/todoList']">Todo list</a>
+      </li>
     </ul>
 </div>
 
@@ -16,6 +22,7 @@
   <router-outlet></router-outlet>
 </div>
 
+<br/><br/><br/><br/><br/><br/><br/><br/><br/>
 <div>
   <h3>Raised Buttons</h3>
   <div class="example-button-row">
