--- a/src/app/product-item/product-item.component.html
+++ b/src/app/product-item/product-item.component.html
@@ -1,9 +1,10 @@
 <div class="box" [class.selected]="isSelected" >
+<h2>Products Item</h2><br/><br/>
 <h3>{{ product.name }}</h3>
 <p>
     <span>ราคา: {{ product.price }} บาท</span>
 </p>
 <p>
-    <button (click)="select()">เลือก</button>
+    <button class="btn btn-primary" (click)="select()">เลือก</button>
 </p>
 </div>
